--- a/css/styles-footer.css
+++ b/css/styles-footer.css
@@ -28,3 +28,16 @@
     padding: 10px 0;
     align-items: center;
 }
+
+@media (max-width: 465px) {
+    .footer-texto {
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 375px) {
+    .footer-texto {
+        font-size: 20px;
+        text-align: center;
+    }
+}
