--- a/css/styles-inicio.css
+++ b/css/styles-inicio.css
@@ -34,60 +34,60 @@ nav {
     overflow: visible;
     margin-left: 30px;
     margin-top: 3px;
- }
+}
 
- nav ul {
+nav ul {
     display: flex;
     list-style: none;
     font-family: 'Helvetica';
-    font-size: large;
+    font-size: Large;
     justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
- }
+}
  
- ul li {
+ul li {
     margin-right: 50px;
- }
+}
 
- ul li a {
+ul li a {
     color: rgb(7, 7, 7);
     text-decoration: none;
     display: block;
     transition: ease-in-out 0.3s;
- }
+}
 
- ul li a:hover {
+ul li a:hover {
     color: rgb(11, 56, 179)
- }
+}
  
- /* Introdução */
- .inicio {
+/* Introdução */
+.inicio {
     height: 100vh;
     display: flex;
     align-items: center;
     background-color: rgb(63, 163, 177);
- }
+}
 
- .altura-ajuste {
+.altura-ajuste {
     width: 100%;
- }
+}
  
- .ajustador {
+.ajustador {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
- }
+}
 
- .centralizador {
+.centralizador {
     max-width: 1000px;
     margin: 0 auto;
- }
+}
  
- .introducao {
+.introducao {
     font-family: 'Helvetica';
-    max-width: 800px;
+    max-width: 741px;
 }
 
 .descricao {
@@ -122,7 +122,11 @@ nav {
     animation: introFotoAnimacao 2.1s infinite alternate-reverse linear;
 }
 
-@media (max-width: 1200px) {
+.close-menu {
+    display: none;
+}
+
+@media (width: 1200px) {
     .inicio {
         height: auto;
     }
@@ -147,11 +151,23 @@ nav {
     }
 
     .menu {
-        margin-right: 15px;
+        margin-right: 10px;
+    }
+
+    .barra {
+        width: 80%;
+    }
+    
+    .barra-conteiner{
+        max-width: 1000px;
+    }
+
+    nav ul {
+        font-size: 15px;
     }
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1024px) {
     .introFoto {
         padding: 25px 0;
     }
@@ -163,17 +179,18 @@ nav {
 
     .ajustador {
         max-width: 300px;
-        display: grid;
-        grid-template-columns: 300px;
-        grid-template-areas: 
-        "introFoto"
-        "introducao";
-        line-height: 35px;
+        line-height: 50px;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        align-items: center;
+        padding-bottom: 50px;
     }
 
     .inicio {
         display: flex;
         justify-content: center;
+        height: 100vh;
     }
 
     .introFoto {
@@ -181,10 +198,115 @@ nav {
         justify-content: center;
     }
 
+    .introducao {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+    }
+    
+    .descricao2 {
+        font-size: 20px;
+    }
+    
+    .nome {
+        font-size: 35px;
+    }
+
     .barra {
         height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .menu-centro {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .centralizador {
+        margin: 0;
+    }
+
+    .barra-conteiner {
+        width: 300px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 50px;
+    }
+
+    .barra-conteiner .logo {
+        width: 100%;
+    }
+
+    .logo {
+        margin-top: 25px;
+        margin-right: 30px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+    }
+
+    ul {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        text-align: center;
+    }
+
+    /* menu mobile */
+
+    .barra {
+        display: block;
+        position: fixed;
+        top: -100vh;
+        transition: ease 0.3s;
+    }
+
+    .close-menu-label::after {
+        content: '≡';
+        position: fixed;
+        z-index: 2;
+        top: 2rem;
+        right: 2rem;
+        background: rgb(44, 106, 221);
+        color: black;
+        opacity: 80%;
+        font-size: 3rem;
+        line-height: 3rem;
+        width: 3rem;
+        height: 3rem;
+        text-align: center;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .close-menu:checked~.barra {
+        top: 0;
+    }
+    
+    .close-menu:checked~.close-menu-label::after {
+        display: block;
+        content: 'X';
+    }
+
+    .barra .barra-conteiner ul li a {
+        font-size: 20px;
+        margin-left: 20px;
+        margin-bottom: 20px;
+        margin-right: 20px;
+    
+    }
+
+    .barra {
+        background: rgb(252, 252, 252);
     }
 }
