--- a/css/styles-inicio.css
+++ b/css/styles-inicio.css
@@ -218,6 +218,7 @@ ul li a:hover {
         display: flex;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
 
     .menu-centro {
