--- a/css/styles-inicio.css
+++ b/css/styles-inicio.css
@@ -190,7 +190,7 @@ ul li a:hover {
     .inicio {
         display: flex;
         justify-content: center;
-        height: 100vh;
+        height: auto;
     }
 
     .introFoto {
