--- a/css/styles-inicio.css
+++ b/css/styles-inicio.css
@@ -120,13 +120,7 @@ ul li a:hover {
 @media (max-width: 1200px) {
     .inicio {
         height: 100vh;
-        display: flex;
-        align-items: center;
         background-color: rgb(63, 163, 177);
-    }
-    
-    .altura-ajuste {
-        width: 100%;
     }
      
     .ajustador {
@@ -139,11 +133,6 @@ ul li a:hover {
     .centralizador {
         max-width: 1000px;
         margin: 0 auto;
-    }
-     
-    .introducao {
-        font-family: 'Helvetica';
-        max-width: 741px;
     }
     
     .descricao {
@@ -191,13 +180,17 @@ ul li a:hover {
         flex-direction: column-reverse;
         justify-content: space-around;
         align-items: center;
-        padding-bottom: 50px;
+    }
+
+    .introducao {
+        justify-content: center;
+        text-align: center;
+        margin-right: 15px;
     }
 
     .inicio {
         display: flex;
         justify-content: center;
-        height: 100vh;
     }
 
     .introFoto {
@@ -205,13 +198,6 @@ ul li a:hover {
         justify-content: center;
     }
 
-    .introducao {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        text-align: center;
-    }
-    
     .descricao2 {
         font-size: 20px;
     }
