--- a/css/styles-footer.css
+++ b/css/styles-footer.css
@@ -29,6 +29,12 @@
     align-items: center;
 }
 
+@media (max-width: 950px) {
+    .footer-texto {
+        font-size: 20px;
+    }
+}
+
 @media (max-width: 465px) {
     .footer-texto {
         font-size: 15px;
