--- a/css/styles-habilidades.css
+++ b/css/styles-habilidades.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    font-family: Helvetica;
+    font-family: 'Poppins', sans-serif;
 }
 
 .centralizador-hab {
@@ -23,7 +23,7 @@
 .titulo-hab {
     text-align: center;
     padding-bottom: 70px;
-    font-family: Helvetica;
+    font-family: 'Poppins', sans-serif;
     font-size: 35px;
     color: black;
 }
@@ -95,7 +95,7 @@
     .disc-conteiner {
         max-width: 200px;
     }
-    
+
     .centralizador-hab {
         height: auto;
     }
