--- a/css/styles-inicio.css
+++ b/css/styles-inicio.css
@@ -39,8 +39,8 @@ nav {
 nav ul {
     display: flex;
     list-style: none;
-    font-family: 'Helvetica';
-    font-size: Large;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
     justify-content: space-around;
     width: 100%;
     flex-wrap: wrap;
@@ -86,7 +86,7 @@ ul li a:hover {
 }
  
 .introducao {
-    font-family: 'Helvetica';
+    font-family: 'Poppins', sans-serif;
     max-width: 741px;
 }
 
@@ -293,8 +293,8 @@ ul li a:hover {
     }
 
     .barra .barra-conteiner ul li a {
-        font-size: 20px;
-        margin-left: 27px;
+        font-size: 17px;
+        margin-left: 20px;
         margin-bottom: 20px;
         margin-right: 20px;
     
