--- a/css/styles-projeto.css
+++ b/css/styles-projeto.css
@@ -54,6 +54,19 @@
     transition: ease-in-out 0.3s;
 }
 
+.projeto1 {
+    background-image: url(../img/calendario.png);
+    background-position: center;
+    background-size: cover;
+    height: 195px;
+    width: 310px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer; 
+}
+
 .blank div {
     background-color: rgb(32, 48, 83);
     width: 1000px;
